# rpassistant

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: __init__.py  campaign.py  npc.py  session.py  user.py
backend/app/routers/: auth.py  campaigns.py  npcs.py  sessions.py  uploads.py
backend/migrations/: env.py
frontend/: package.json  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/stores/: auth.js  campaigns.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/(auth)/login/: +page.svelte
frontend/src/routes/(auth)/register/: +page.svelte
frontend/src/routes/campaigns/: +page.svelte
rpa-backend/: hello.py  pyproject.toml
